--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,10 @@ steps:
     platform: 'x86'
     solution: '$(solution)'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:AppxBundlePlatforms="$(buildPlatform)" /p:AppxPackageDir="$(appxPackageDir)" /p:AppxBundle=Always /p:UapAppxPackageBuildMode=StoreUpload'
+    msbuildArgs: '/p:AppxBundlePlatforms="$(buildPlatform)" 
+    /p:AppxPackageDir="$(appxPackageDir)" 
+    /p:AppxBundle=Always 
+    /p:UapAppxPackageBuildMode=StoreUpload'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
